--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile 'info.hoang8f:fbutton:1.0.5'
     compile 'com.larswerkman:HoloColorPicker:1.4'
     testCompile 'junit:junit:4.12'
+    compile 'org.altbeacon:android-beacon-library:2+'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.facebook.android:account-kit-sdk:4.+'
     compile 'com.android.support:support-v4:23.4.0'
